KNOWN BUG:
Valgrind-2.1 will interfere with writeactive, break fchmod.
Use Valgrind 2.0.
|
20040513a: Changes since 20040510a:
- Bugfix: fetchnews will try authentication when GROUP command replies 480.
- Bugfix: bogus "too few fields in DATE reply" in debug mode.
- Bugfix: plugged some memory leaks.
- Cleanup: fchmod bug report message revised to include "file
  descriptor".

20040510a: Changes since 20040326a:
- applyfilter crashed when an article had the "Message-ID" header in
  different case, for example, "Message-Id". Reported by Robert
  Marshall.
- Do not run chmod -R on the spool unconditionally, it's too expensive.
  Just print a message what to type.

20040326a: Changes since 20040305a:
- VERSIONS 20040319a AND 20040324a HAVE BEEN WITHDRAWN.
- Documentation: document logstderr instead of the improper
  ln_log_stderronly. Patch by Thomas Schwinge.
- Documentation: mention there was an internal change to stringlist
  handling before 20040227a. This triggered the XPAT/XHDR/NEWNEWS
  regression.
- Bugfix: XPAT, XHDR, NEWNEWS caused a segmentation fault when issued
  without argument (slrn bug triggered by ESC 1 ESC p or ESC 2 ESC p for
  instance). Reported by Robert Grimm.
- Leafnode now makes all directories group writable by default but
  withdraws *all* world permissions. To meddle with the spool, put the
  user to meddle in the same group that the news user uses as primary
  group. If you do this, YOU take the blame for all security issues,
  insecure scripts and all that, particularly when using CGI scripts
  or setgid flags.

VERSIONS 20040319a AND 20040324a HAVE BEEN WITHDRAWN.

20040305a: Changes since 20040227a:
- Robustness: Leafnode programs refuse to start when an unknown or
  unsupported authentication method is configured.
- Bugfix: Fetchnews will no longer move articles to failed.postings if
  it has been run with the "-S server" switch. (Report by Robert Marshall)
- Bugfix: Fetchnews will no longer abort when it needs to fetch the