@@ -2,6 +2,10 @@ KNOWN BUG:
 Valgrind-2.1 will interfere with writeactive, break fchmod.
 Use Valgrind 2.0.
 |
+Changes since 20040513a:
+- Bugfix: texpire will now properly repair hard links of cross-posted
+  articles. Bug reported by Jeff Grossman.
+
 20040513a: Changes since 20040510a:
 - Bugfix: fetchnews will try authentication when GROUP command replies 480.
 - Bugfix: bogus "too few fields in DATE reply" in debug mode.
